Feat: added spa tanstack router

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>SSR Example</title>
     <script async defer type="module" src="./client.js"></script>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
