Feat: added jsx to the client side and transpile this jsx via webpack and babel

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>SSR Example</title>
-    <script async defer type="module" src="./client.js"></script>
+    <script async defer type="module" src="./src/client.jsx"></script>
     <link rel="stylesheet" href="style.css">
 
 </head>
